# PLaMo-100B

./: README.md  app.py  demo.py  pyproject.toml
.github/workflows/: request.yaml
